chore: clean stuff (#31)
* chore: clean stuff

* ci: update migration ci
